# pickit

./: .gemini-project-instructions.md  Cargo.toml  GEMINI.md  LICENSE  README.md  generate_repo.sh  plan.md
prompt/: implementation-rule.md  plan.md  requirements.md  tasks.md
src/: app.rs  git.rs  git_test.rs  main.rs
