[package]
name = "pickit"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
crossterm = "0.29.0"
itertools = "0.14.0"
notify = "8.2.0"
once_cell = "1.19.0"
ratatui = "0.30.0"
thiserror = "2.0.17"

[dev-dependencies]
tempfile = "3.24.0"

[profile.release]
debug = "line-tables-only"
